# FlintByteCode

./: CMakeLists.txt  LICENSE  README.md
include/: ByteCode.hpp  OpCode.hpp
include/FlintByteCode/: ByteCode.hpp  OpCode.hpp
libs/bit_converter/: bit_converter.hpp
libs/catch2/: catch.hpp
src/: ByteCode.cpp  CMakeLists.txt
tests/: CMakeLists.txt  TestByteCodePrimitives.cpp  TestComparison.cpp  TestConstant.cpp  TestFunction.cpp  TestHelpers.hpp  TestLabel.cpp  TestStructureMeta.cpp
